# cereggii-benchmarks

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  enable-perf.sh  install-and-run.sh  pyproject.toml
benchmarks/: __init__.py  __main__.py  _perf_categories.py  _shared.py  cli.py  config.py  growt.py  hw_perf.py  performance_report.py  reports.py  utils.py
benchmarks/benches/: __init__.py  aggregation.py  batch_lookup.py  book.py  delete.py  insert.py  int_counter.py  int_counter_handle.py  iteration.py  lookup_contention.py  lookup_fail.py  lookup_succ.py  mix.py  update_contention.py
hw-perf/: Makefile  cache.c  casperf128.c  casperf16.c  casperf32.c  casperf64.c  casperf64multiline.c  casperf8.c  casperf8contended.c  casperf8uncontended.c
results/20240811-161920/: hw-perf.json
results/20240811-161920/_performance_reports/: aggregation.pgf  aggregation_growing.pgf  aggregation_reduce.pgf  book.pgf  delete.pgf  insert.pgf  lookup_contention.pgf  mix.pgf  mix_growing.pgf  performance_report.json  update_contention.pgf
